--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -7,11 +7,11 @@ assets/scss/_styles_project.scss
 */
 
 // Disable gitlab side buttons:
-//.td-page-meta--view { display: none !important; }
-//.td-page-meta--edit { display: none !important; }
-//.td-page-meta--child { display: none !important; }
-.td-page-meta--issue { display: none !important; }
-//.td-page-meta--project-issue { display: none !important; }
+.td-page-meta--view { display: none !important; }
+.td-page-meta--edit { display: none !important; }
+.td-page-meta--child { display: none !important; }
+//.td-page-meta--issue { display: none !important; }
+.td-page-meta--project-issue { display: none !important; }
 
 /* Custom styles for automatic numbering of figure captions */
 
