--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -6,3 +6,6 @@ Add styles or override variables from the theme here.
 
 $primary: #00A6D6;
 $secondary: #A23B72;
+
+$td-enable-google-fonts: false;
+
