add interactive right-side toc, as per: https://github.com/google/docsy/pull/1049

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -29,3 +29,5 @@ figcaption::before {
   color: gray; /* Set the color for the figure number part */
   font-weight: bold; /* Optional: Make the figure number bold */
 }
+
+@import "tocbot";
