style: add color styles for comment syntax highlighting in SCSS

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -87,3 +87,21 @@ pre.chroma .nb {
 pre.chroma .s2 {
   color: #2aa198; /* Adjust color as needed */
 }
+
+
+/* Comment Multiline */
+.chroma .cm {
+  color: #2d7c08;
+}
+/* Comment Preproc */
+.chroma .cp {
+  color: #2d7c08;
+}
+/* Comment single line */
+.chroma .c1 {
+  color: #2d7c08;
+}
+/* Comment Special */
+.chroma .cs {
+  color: #2d7c08;
+}
