add gurubase badget

--- a/layouts/partials/custom-head.html
+++ b/layouts/partials/custom-head.html
@@ -1,5 +1,4 @@
 <!-- Gurubase Widget -->
-Live Widget
 <script async src="https://widget.gurubase.io/widget.latest.min.js" 
     data-widget-id="daHYtXHdDXuG9kL3bddrWFB7ZLmUXNyfdgC_fSDIajo"
     data-text="Ask AI"
@@ -7,6 +6,10 @@ Live Widget
     data-light-mode="auto"
     id="guru-widget-id">
 </script>
+<!-- Gurubase Widget -->
+<script>
+    console.log("✅ custom-head.html loaded");
+  </script>
 <!-- Local Widget -->
 <!-- <script async src="https://widget.gurubase.io/widget.latest.min.js" 
     data-widget-id="_qyuCVp0sqLqgTWY_bDjmcsHHFtlMB2PfwV9UwqrZQQ"
