add DataTables integration with pagination and column visibility to nodes table

--- a/layouts/partials/hooks/head-end.html
+++ b/layouts/partials/hooks/head-end.html
@@ -1,3 +1,8 @@
+<!-- Enable dataTables -->
+<link rel="stylesheet" href="https://cdn.datatables.net/2.3.0/css/dataTables.dataTables.css" />
+<!-- Enable buttons extension -->
+<link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.0.2/css/buttons.dataTables.css" />
+
 <!-- Gurubase Widget -->
 <script async src="https://widget.gurubase.io/widget.latest.min.js" 
     data-widget-id="daHYtXHdDXuG9kL3bddrWFB7ZLmUXNyfdgC_fSDIajo"
@@ -6,10 +11,7 @@
     data-light-mode="auto"
     id="guru-widget-id">
 </script>
-<!-- Gurubase Widget -->
-<script>
-    console.log("✅ custom-head.html loaded");
-  </script>
+
 <!-- Local Widget -->
 <!-- <script async src="https://widget.gurubase.io/widget.latest.min.js" 
     data-widget-id="_qyuCVp0sqLqgTWY_bDjmcsHHFtlMB2PfwV9UwqrZQQ"
